--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,4 +91,45 @@
     top: 3px;
     position: relative;
   }
+
+  .grid-page {
+    --padding-inline: 1rem;
+    --content-max-width: 900px;
+    --breakout-max-width: 1200px;
+    --breakout-size: calc(
+      (var(--breakout-max-width) - var(--content-max-width)) / 2
+    );
+    background-color: var(--color-green-800);
+    display: grid;
+    grid-template-columns:
+      [full-width-start] minmax(var(--padding-inline), 1fr)
+      [breakout-start] minmax(0, var(--breakout-size))
+      [content-start] min(
+        100% - (var(--padding-inline) * 2),
+        var(--content-max-width)
+      )
+      [content-end]
+      minmax(0, var(--breakout-size)) [breakout-end]
+      minmax(var(--padding-inline), 1fr) [full-width-end];
+
+    grid-template-rows: min-content;
+
+    > :not(.breakout, .full-width) {
+      grid-column: content;
+    }
+
+    > .breakout {
+      grid-column: breakout;
+    }
+
+    > .full-width {
+      grid-column: full-width;
+    }
+  }
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
